fixed size of off screen menu font

--- a/styles/stylesMobile.css
+++ b/styles/stylesMobile.css
@@ -31,9 +31,11 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  font-size: 10%;
   transition: 0.3s ease;
   font-family: "Dosis";
+}
+.offScreenMenu input{
+  font-size: 40px;
 }
 .offScreenMenu.active {
   left: 0;
